Add GetChannelInfoAsync and rename UserInfo->ChannelInfo
- Includes some other renames inside ChannelInfo class
- Fixes #28

Note: this makes two huge requests - gets user uploads as a playlist (only one page though) and then queries video info for the first video.

--- a/DemoWpf/Views/MainWindow.xaml
+++ b/DemoWpf/Views/MainWindow.xaml
@@ -107,7 +107,7 @@
                                 Height="50"
                                 Margin="5"
                                 VerticalAlignment="Top"
-                                Source="{Binding VideoInfo.Author.ChannelLogoUrl}" />
+                                Source="{Binding VideoInfo.Author.LogoUrl}" />
 
                             <Grid Grid.Column="1">
                                 <Grid.RowDefinitions>
