--- a/DemoWpf/App.xaml
+++ b/DemoWpf/App.xaml
@@ -1,10 +1,10 @@
 ﻿<Application
-    x:Class="YoutubeExplode.DemoWpf.App"
+    x:Class="DemoWpf.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:converters="clr-namespace:YoutubeExplode.DemoWpf.Converters"
-    xmlns:demoWpf="clr-namespace:YoutubeExplode.DemoWpf"
     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+    xmlns:converters="clr-namespace:DemoWpf.Converters"
+    xmlns:demoWpf="clr-namespace:DemoWpf"
     Exit="App_OnExit"
     Startup="App_OnStartup"
     StartupUri="Views/MainWindow.xaml">
