--- a/DemoWpf/Views/MainWindow.xaml
+++ b/DemoWpf/Views/MainWindow.xaml
@@ -1,5 +1,5 @@
 ﻿<Window
-    x:Class="YoutubeExplode.DemoWpf.Views.MainWindow"
+    x:Class="DemoWpf.Views.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
@@ -10,7 +10,7 @@
     DataContext="{Binding MainViewModel, Source={StaticResource Locator}}"
     FocusManager.FocusedElement="{Binding ElementName=VideoIdTextBox}"
     FontFamily="{DynamicResource MaterialDesignFont}"
-    Icon="/YoutubeExplode.DemoWpf;component/favicon.ico"
+    Icon="/DemoWpf;component/favicon.ico"
     SnapsToDevicePixels="True"
     TextElement.FontSize="13"
     TextElement.FontWeight="Regular"
